# voicein

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  install.sh  pyproject.toml
.cursor/plans/: voicein_mvp_plan_8d5216f8.plan.md
systemd/: voicein.service
voicein/: __init__.py  __main__.py  config.py  daemon.py  hotkey.py  pipeline.py  state.py  tray.py
voicein/audio/: __init__.py  recorder.py
voicein/inject/: __init__.py  clipboard.py
voicein/llm/: __init__.py  openai.py
voicein/stt/: openai.py
